# ipc-exporter-rust

./: CLAUDE.md  Cargo.toml  LICENSE  METRICS.md  README.md  build.rs  flake.nix  justfile  module.nix  report.md
src/: main.rs  metrics.rs  notifications.rs  rpc.rs  server.rs
