[package]
name = "ipc-exporter-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
bitcoin = "0.32"
capnp = "0.19"
capnp-rpc = "0.19"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["net", "rt", "macros", "time", "signal", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
capnpc = "0.19"
